# duetector

./: .all-contributorsrc  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  DEVELOP.md  LICENSE  README.md  README_en.md  README_zh.md  RELEASE.md  pyproject.toml  pytest.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-images.yml  build-latest-images.yml  docker-image.yml  docker-publish.yml  publish.yml  python-package.yml
dev-tools/: entrypoint-cli.py  entrypoint-pip.py  entrypoint-server.py  entrypoint.py  start-docs-host.sh  start-jaeger.sh
docker/: Dockerfile  Dockerfile.bcc  Dockerfile.dev  start.sh
docs/: Makefile  README.md  conf.py  index.rst  kernel_config.md  make.bat  usage.rst
docs/design/: CO-RE.md  README.md
docs/design/src/: architecture.drawio  dataflow.drawio  spm-arch.drawio  spm-state-flow.drawio
docs/draft/: CO-RE.md  benchmark.md  lab report.md
docs/draft/case-mnist/: README.md  report.md
docs/how-to/: intergration-with-otel.md  run-with-docker.md  run-with-kata-containers.md
docs/how-to/etc/: kata-linux-6.1.38-100.config
docs/source/: conf.py  config.rst  db.rst  exceptions.rst  index.rst  utilities.rst
docs/source/analyzer/: db.rst  index.rst  jaeger.rst  models.rst
docs/source/cli/: daemon.rst  index.rst  main.rst  server-daemon.rst  server.rst
docs/source/collectors/: base.rst  db.rst  index.rst  models.rst  otel.rst
docs/source/filters/: base.rst  index.rst  pattern.rst
docs/source/managers/: analyzer.rst  collector.rst  filter.rst  index.rst  tracer.rst
docs/source/monitors/: bcc.rst  index.rst  sh.rst  subprocess.rst
docs/source/tools/: config_generator.rst  daemon.rst  index.rst  poller.rst
docs/source/tracers/: clone.rst  index.rst  openat2.rst  tcpconnect.rst  uname.rst
docs/usercases/: README.md
docs/usercases/simplest-open-count/: README.md
docs/usercases/tracking-mljob-in-kata-containers/: README.md  cifar10-rest50-example.ipynb  sketch.drawio
duetector/: __init__.py  bcc.py  config.py  db.py  exceptions.py  log.py  otel.py  utils.py
duetector/analyzer/: base.py  db.py  models.py  register.py
duetector/analyzer/jaeger/: analyzer.py
duetector/cli/: daemon.py  main.py  server.py  server_daemon.py
duetector/collectors/: __init__.py  base.py  db.py  file.py  models.py  otel.py  register.py  sqlite.py
duetector/extension/analyzer/: __init__.py
duetector/extension/collector/: __init__.py  manager.py  var.py
duetector/extension/filter/: __init__.py  manager.py  var.py
duetector/extension/injector/: __init__.py
duetector/extension/tracer/: __init__.py  manager.py  var.py
duetector/filters/: __init__.py  base.py  pattern.py  register.py
duetector/injectors/: base.py  docker.py  inspector.py  k8s.py  register.py
duetector/manager/: __init__.py  base.py  collector.py  filter.py  tracer.py
duetector/managers/: __init__.py  analyzer.py  base.py  collector.py  filter.py  injector.py  tracer.py
duetector/monitor/: base.py  bcc_monitor.py
duetector/monitors/: __init__.py  base.py  bcc_monitor.py  sh_monitor.py  subprocess_monitor.py
duetector/proto/: subprocess.py
duetector/service/: app.py  base.py  config.py  exceptions.py  utils.py
duetector/service/control/: controller.py  routes.py
duetector/service/query/: controller.py  models.py  routes.py
duetector/static/: config.toml
duetector/tools/: config_generator.py  daemon.py  generate_config.py  poller.py
duetector/tracer/: base.py  open.py
duetector/tracers/: __init__.py  base.py  clone.py  dummy.py  open.py  openat2.py  register.py  tcpconnect.py  uname.py
duetector/tracers/bcc/: clone.py  openat2.py  tcpconnect.py
duetector/tracers/sh/: uname.py
duetector/tracers/subprocess/: dummy.py  dummy_process.py
examples/: README.md
examples/config/: README.md  config.toml  sh-tracer-template.config.toml
examples/extension/analyzer-extension/: README.md  pyproject.toml
examples/extension/analyzer-extension/duetector_emptyanalyzer/: empty.py
examples/extension/collector-extension/: README.md  pyproject.toml
examples/extension/collector-extension/duetector_echocollector/: echo.py
examples/extension/filter-extension/: README.md  pyproject.toml
examples/extension/filter-extension/duetector_echofilter/: echo.py
examples/extension/tracer-extension/: README.md  pyproject.toml
examples/extension/tracer-extension/duetector_logtracer/: log.py
tests/: config.toml  conftest.py  test_bcc_monitor.py  test_collector.py  test_config.py  test_daemon.py  test_db_analyzer.py  test_db_collector.py  test_duetector.py  test_filter.py  test_jaeger_analyzer.py  test_monitor.py  test_otel_collector.py  test_poller.py  test_repo.py  test_service.py  test_sh_monitor.py  test_sp_monitor.py
tests/base/: test_bcc_monitor.py  test_db_analyzer.py  test_db_collector.py  test_filter.py  test_otel_collector.py  test_sh_monitor.py
tests/service/: test_query.py  test_token.py
tests/standalone/: test_bcc_monitor.py  test_daemon.py  test_db_analyzer.py  test_poller.py  test_repo.py  test_tracer_template.py
(+29 files in other folders)
