[build-system]
requires = ["hatchling", ]
build-backend = "hatchling.build"

[project]
name = "duetector"
description = "duetector"
keywords = ["duetector"]
requires-python = ">=3.8"
dependencies = [
]
dynamic = ["version", ]
classifiers = [
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
[project.optional-dependencies]
test = [
    "pytest",
]


[[project.authors]]
name = "hitsz-ids"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "Apache Software License 2.0"

[project.urls]
Source = "https://github.com/hitsz-ids/duetector"

[tool.check-manifest]
ignore = [".*", ]

[tool.hatch.version]
path = "duetector/__init__.py"
