[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duetector"
description = "duetector"
keywords = ["duetector"]
requires-python = ">=3.8"
dependencies = [
    "loguru",
    "pydantic>=2",
    "pluggy",
    "tomli",
    "tomli-w",
    "SQLAlchemy>=2",
    "click",
    "psutil",
    # Following are for web server
    "fastapi",
    "uvicorn[standard]",
    "anyio"
]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
[project.optional-dependencies]
test = ["pytest", "pytest-cov", "httpx"]
docs = ["Sphinx<=7.2.4", "sphinx-rtd-theme", "sphinx-click", "autodoc_pydantic"]

[project.scripts]
duectl = "duetector.cli.main:cli"
duectl-daemon = "duetector.cli.daemon:cli"
duectl-server = "duetector.cli.server:cli"
duectl-server-daemon = "duetector.cli.server_daemon:cli"

[[project.authors]]
name = "hitsz-ids"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "Apache Software License 2.0"

[project.urls]
Source = "https://github.com/hitsz-ids/duetector"

[tool.check-manifest]
ignore = [".*"]

[tool.hatch.version]
path = "duetector/__init__.py"
