# Build with hatch, you can use any build tool you like.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duetector-echocollector"

dependencies = ["duetector"]
dynamic = ["version"]

# This is the entry point for the CollectorManager to find the Collector.
[project.entry-points."duetector.collector"]
echocollector= "duetector_echocollector.echo"

[tool.hatch.version]
path = "duetector_echocollector/__init__.py"
